@@ -1,8 +1,7 @@
 Package: robustbase
 Version: 0.99-3
 VersionNote: Released 0.99-2 on 2024-01-27 to CRAN
-VersionNote: Released 0.99-1 on 2023-11-28 to CRAN
-Date: 2024-06-17
+Date: 2024-06-18
 Title: Basic Robust Statistics
 Authors@R: c(person("Martin","Maechler", role=c("aut","cre"), email="maechler@stat.math.ethz.ch", comment = c(ORCID = "0000-0002-8685-9910"))
          , person("Peter", "Rousseeuw", role="ctb", comment = "Qn and Sn")
